// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxMenuIcon should render 1`] = `
<ListBoxMenuIcon
  isOpen={true}
  translateWithId={[Function]}
>
  <div
    className="bx--list-box__menu-icon bx--list-box__menu-icon--open"
  >
    <Icon
      alt="Close menu"
      description="Close menu"
      fillRule="evenodd"
      name="caret--down"
      role="img"
    >
      <svg
        alt="Close menu"
        aria-label="Close menu"
        fillRule="evenodd"
        height="5"
        name="caret--down"
        role="img"
        viewBox="0 0 10 5"
        width="10"
      >
        <title>
          Close menu
        </title>
        <path
          d="M0 0l5 4.998L10 0z"
          key="key0"
        />
      </svg>
    </Icon>
  </div>
</ListBoxMenuIcon>
`;

exports[`ListBoxMenuIcon should render 2`] = `
<ListBoxMenuIcon
  isOpen={false}
  translateWithId={[Function]}
>
  <div
    className="bx--list-box__menu-icon"
  >
    <Icon
      alt="Open menu"
      description="Open menu"
      fillRule="evenodd"
      name="caret--down"
      role="img"
    >
      <svg
        alt="Open menu"
        aria-label="Open menu"
        fillRule="evenodd"
        height="5"
        name="caret--down"
        role="img"
        viewBox="0 0 10 5"
        width="10"
      >
        <title>
          Open menu
        </title>
        <path
          d="M0 0l5 4.998L10 0z"
          key="key0"
        />
      </svg>
    </Icon>
  </div>
</ListBoxMenuIcon>
`;
